# deepcleanv2

./: Instructions_deepcleanv2.md  README.md  dev.ipynb  export_vars.sh  fetch.sh  infer.sh  law.cfg  luigi.cfg  train-dev.ipynb  train-outlaw.py  train.sh
data_replay/get_lldata/: get_data.sh
data_replay/make_lldata/: make_lldata.py  make_lldata.sh
data_replay/replay/: replay_H1.out  start_replay.sh
deepclean/: __init__.py  base.py  config.py  utils.py
deepclean/couplings/: __init__.py  sub_CDC_105Hz.py  sub_CDC_10Hz.py  sub_CDC_120Hz.py  sub_CDC_150Hz.py  sub_CDC_180Hz.py  sub_CDC_30Hz.py  sub_CDC_60Hz.py
deepclean/tasks/: __init__.py  data.py  infer.py  train.py
deepclean/tasks/condor/: base.py  workflows.py
dev/: train-outlaw_120Hz.py  train-outlaw_180Hz.py  train-outlaw_30Hz.py
myprojects/60Hz-O3-MDC/: config_clean.yaml
projects/clean/: config_clean.yaml  fix_frames.ipynb  online-clean.ipynb  pyproject.toml  run-clean.sh
projects/clean/clean/: frames.py.bk  infer.py
projects/data/: apptainer.def  conda-lock.yml  environment.yaml  pyproject.toml
projects/infer/: apptainer.def  pyproject.toml
projects/infer/infer/: __main__.py  cli.py
projects/train/: apptainer.def  config-test.yaml  config.yaml  config_dcprod.yaml  config_offline.yaml  pyproject.toml  test-train.ipynb
projects/train/train/: cli.py  data.py  metrics.py  model.py  test.ipynb
projects/train/train/architectures/: autoencoder.py
