[tool.poetry]
name = "clean"
description = "DeepClean Online using Lightning"
version = "0.0.1"
authors = ["Muhammed Saleem"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# torch libs
torchmetrics = "^1"
torch = {version = "^2.0", source = "torch"}
torchaudio = {version = "^2.0", source = "torch"}

# lightning dependencies
lightning = "^2.0"
wandb = "^0.15"
jsonargparse = {version = "^4.17", extras = ["signatures"]}
ml4gw = "^0.7"

# local dependencies
utils = {path = "../utils", develop = true}
train = {path = "../train", develop = true}
numpy = "<2.0.0"
sympy = "^1.12"
gwpy = "^3.0.8"
lalsuite = "^7.22"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
