[tool.poetry]
name = "train"
description = "Train DeepClean using Lightning"
version = "0.0.1"
authors = ["Chia-Jui Chou"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# torch libs
torch = {version = "^2.0", source = "torch"}
torchaudio = {version = "^2.0", source = "torch"}
torchmetrics = "^1"

# lightning dependencies
lightning = "^2.0"
wandb = "^0.15"
jsonargparse = {version = "^4.17", extras = ["signatures"]}
ml4gw = "^0.7"

# local dependencies
utils = {path = "../utils", develop = true}
numpy = "<2.0.0"
sympy = "^1.12"
gwpy = "^3.0.8"
lalsuite = "^7.22"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
